[gd_scene load_steps=12 format=3 uid="uid://8tj5onrmtkb"]

[ext_resource type="Script" path="res://scripts/grass.gd" id="1_e4ko2"]
[ext_resource type="PackedScene" uid="uid://duoos41o6m7r7" path="res://models/grass_1.glb" id="1_x5w23"]
[ext_resource type="PackedScene" uid="uid://cqcmtyxfeia3k" path="res://models/grass_2.glb" id="2_hsg2q"]
[ext_resource type="Shader" path="res://shaders/curvature.gdshader" id="2_qpkwa"]
[ext_resource type="PackedScene" uid="uid://rtr5v5d87w8u" path="res://models/grass_3.glb" id="3_ixm02"]
[ext_resource type="Texture2D" uid="uid://3yrbxkwni8gi" path="res://models/palette.png" id="3_rg8tn"]
[ext_resource type="PackedScene" uid="uid://be68k2rscasm8" path="res://models/grass_4.glb" id="4_x83n4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_huvvv"]
render_priority = 0
shader = ExtResource("2_qpkwa")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = null
shader_parameter/metallic = null
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = null
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = null
shader_parameter/texture_albedo = ExtResource("3_rg8tn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x8u40"]
render_priority = 0
shader = ExtResource("2_qpkwa")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = null
shader_parameter/metallic = null
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = null
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = null
shader_parameter/texture_albedo = ExtResource("3_rg8tn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n22vl"]
render_priority = 0
shader = ExtResource("2_qpkwa")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = null
shader_parameter/metallic = null
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = null
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = null
shader_parameter/texture_albedo = ExtResource("3_rg8tn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gyo7q"]
render_priority = 0
shader = ExtResource("2_qpkwa")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = null
shader_parameter/metallic = null
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = null
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = null
shader_parameter/texture_albedo = ExtResource("3_rg8tn")

[node name="Grass" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_e4ko2")

[node name="grass_1" parent="." instance=ExtResource("1_x5w23")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.0170437, 0, 0.0395367)

[node name="Grass1" parent="grass_1" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_huvvv")

[node name="grass_2" parent="." instance=ExtResource("2_hsg2q")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.0170437, 0, 0.0395367)

[node name="Grass2" parent="grass_2" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_x8u40")

[node name="grass_3" parent="." instance=ExtResource("3_ixm02")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.0170437, 0, 0.0395367)

[node name="Grass3" parent="grass_3" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_n22vl")

[node name="grass_4" parent="." instance=ExtResource("4_x83n4")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.0170437, 0, 0.0395367)

[node name="Grass4" parent="grass_4" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_gyo7q")

[editable path="grass_1"]
[editable path="grass_2"]
[editable path="grass_3"]
[editable path="grass_4"]
